2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* Preferences/PreferencesDialog.cs: Use ColorTools instead of broken local
	  conversion methods.
	* Chats/ChatView.cs: Apply overriden background color in AddMessage().
	
	  Better debug output for GetBestTextColor().
	* ColorTools.cs: Implemented GetHexCodeColor(Gdk.Color).
	
	  Check hex code length in GetGdkColor(string).
	
	  Fixed Gdk.Color to hex code conversion using bit shifting. (thanks to
	  Zhila)

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* Chats/ChatView.cs, ColorTools.cs: Implemented getting a good color based
	  on the background color for a good contrast. Thanks to Mikael and Zhila
	  for the algorithm!

2008-07-30  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp, smuxi-frontend-gnome.exe.config: Added .exe.config for
	  log4net configuration to project.

2008-07-30  Mirco Bauer <meebey@meebey.net> 

	* QuickConnectDialog.cs: Fixed server selection using "double click", by
	  setting f_ServerModel before confirming the dialog. (closes trac bug
	  #80)

2008-07-28  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Build as WinExe.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* ChatViewManager.cs: Implemented grouping person and group chats to their
	  protocol chat. (closes trac bug #54)

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Removed AssemblyInfo.cs.in from project.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Use Gtk.Stock.About button.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs: Implemented applying topic and user list position
	  settings for existing chats. (closes trac bug #56)
	
	  Refactored code to apply layout changes for topic and user list
	  position.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* ChatViewManager.cs, Makefile.am: Allow re-ordering of tabs if GTK# 2.10 is
	  available. (closes tac bug #68)

2008-07-27  Mirco Bauer <meebey@meebey.net> 
