@@ -1,3 +1,8 @@
+2008-08-21  Mirco Bauer <meebey@meebey.net> 
+
+	* ChatViewManager.cs: Fixed sorting order of group and person chats when
+	  there is no next protocol chat available. (Closes trac bug #87)
+
 2008-08-05  Mirco Bauer <meebey@meebey.net> 
 
 	* Preferences/PreferencesDialog.cs: Use ColorTools instead of broken local
